# em27-metadata

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: test-python-library.yml  test.yml
data/: README.md  campaigns.json  locations.json  sensors.json
docs/: example.excalidraw
em27_metadata/: __init__.py  interfaces.py  loader.py  types.py
em27_metadata/sample-data/: sensors.json
em27_metadata/sample_data/: README.md
tests/: .env.example  README.md  test_data_integrity.py  test_datetime_parsing.py  test_explosion.py  test_getter_function.py  test_loaders.py  test_parsing_logic.py  test_remote_connection.py  test_static_types.py
tum_esm_em27_metadata/: __init__.py  interfaces.py  loader.py  types.py
