[tool.poetry]
name = "em27_metadata"
version = "1.0.0-rc.2"
description = "Single source of truth for ESM's EM27 measurement logistics"
readme = "README.md"
authors = [
    "Moritz Makowski <moritz.makowski@tum.de>",
    "Marlon Mueller <marlon.mueller@tum.de>",
]
packages = [{ include = "em27_metadata" }]
repository = "https://github.com/tum-esm/em27-metadata"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.4.2"
requests = "^2.31.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
types-requests = "^2.31.0.6"
yapf = "^0.40.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
implicit_reexport = true
no_warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pendulum"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "ci: run in GitHub CI",
    "action: run when using this repo as a GitHub Action",
    "local: run locally",
]

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true
