[tool.poetry]
name = "em27_metadata"
version = "1.0.0-rc.5"
description = "Single source of truth for ESM's EM27 measurement logistics"
readme = "README.md"
authors = [
    "Moritz Makowski <moritz.makowski@tum.de>",
    "Marlon Mueller <marlon.mueller@tum.de>",
]
packages = [{ include = "em27_metadata" }]
repository = "https://github.com/tum-esm/em27-metadata"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pydantic = "^2.5.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
types-requests = "^2.31.0.20231231"
yapf = "^0.40.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pendulum"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "library: test the library in GitHub's CI or locally",
    "action: run when using this repo as a GitHub Action",
]

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true
