[project]
name = "em27_metadata"
version = "1.2.0"
description = "Single source of truth for ESM's EM27 measurement logistics"
authors = [
    { name = "Moritz Makowski", email = "moritz.makowski@tum.de" },
    { name = "Marlon Müller", email = "marlon.mueller@tum.de" },
]
dependencies = ["requests>=2.31.0", "pydantic>=2.9.1", "tum-esm-utils>=2.3.2"]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
repository = "https://github.com/tum-esm/em27-metadata"
documentation = "https://em27-retrieval-pipeline.netlify.app/"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.20240125",
    "yapf>=0.40.2",
    "python-dotenv>=1.0.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
build.includes = ["em27_metadata"]
build.excludes = ["tests"]

[tool.mypy]
strict = true
implicit_reexport = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
markers = [
    "library: test the library in GitHub's CI or locally",
    "action: run when using this repo as a GitHub Action",
]

[tool.yapf]
based_on_style = "facebook"
coalesce_brackets = true
split_before_dict_set_generator = true
each_dict_entry_on_separate_line = false
spaces_around_subscript_colon = true
